salesforce-apex-presentation/force-app/main/default/objects/Device__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <inlineHelpText>Device Owner</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Devices</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>