salesforce-apex-presentation/force-app/main/default/objects/Device__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Serial Number</inlineHelpText>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>